[project]
name = "windspharm"
version = "1.7.0"
authors = [
  { name="Andrew Dawson", email="abcd@efgh.com" },
]
description = "Windspharm"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nbarjun/SCAFET"
Issues = "https://github.com/nbarjun/SCAFET/issues"
